Removed unuswed files and folders.

--- a/src/account/login/login.component.html
+++ b/src/account/login/login.component.html
@@ -10,7 +10,7 @@
 						<img class="client-logo" src="assets/images/logo/greater_chennai_police_transparent.png" alt="">
 						<img class="client-logo" src="assets/images/logo/tn_police_logo_transparent.png" alt="">
 					</div>
-					<h2 class="title p-2">Vehicle Monitoring System</h2>
+					<h2 class="title p-2">Face recognition</h2>
 				</div>		
 				<div class="authentication-box">			
 					<div class="card mt-4">
