Header logo has removed.

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,8 +5,8 @@
       <div class="logo-wrapper"><a href="javascript:void(0)"><img src="assets/images/endless-logo.png" alt=""></a></div>
     </div> -->    
     <div class="header-logo">
-      <img class="logo_1" src="assets/images/logo/greater_chennai_police_transparent.png" alt="header-user">
-      <img class="img-70" src="assets/images/logo/tn_police_logo_transparent.png" alt="header-user">
+      <!-- <img class="logo_1" src="assets/images/logo/greater_chennai_police_transparent.png" alt="header-user"> -->
+      <!-- <img class="img-70" src="assets/images/logo/tn_police_logo_transparent.png" alt="header-user"> -->
     </div>
     <div class="header-title">
       <h2 class="p-t-10">Face Recognition</h2>
@@ -44,6 +44,7 @@
             <label class="custom-control-label" for="customSwitch1">{{convoyStatus == 'CONVOY_STARTED' ? 'ON' : 'OFF'}}</label>
           </div>
         </li> -->
+        <li></li>
         <li>
           <a href="javascript:void(0)" class="text-dark" (click)="toggleFullScreen()">
             <app-feather-icons [icon]="'maximize'"></app-feather-icons>
