Dashboard design template has added.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,7 @@ body{
 
 .card {
   margin-bottom: 10px !important;
-  height: calc(100vh - 150px);
+  // height: calc(100vh - 150px);
   .card-header,
   .card-body {
     padding: 10px !important;
