Webcam npm package has added.

--- a/src/account/login/login.component.html
+++ b/src/account/login/login.component.html
@@ -7,8 +7,8 @@
 			<div class="col-xs-12 col-lg-6 col-md-6">
 				<div class="authentication-box m-t-20">
 					<div class="text-center">
-						<img class="client-logo" src="assets/images/logo/greater_chennai_police_transparent.png" alt="">
-						<img class="client-logo" src="assets/images/logo/tn_police_logo_transparent.png" alt="">
+						<!-- <img class="client-logo" src="assets/images/logo/greater_chennai_police_transparent.png" alt=""> -->
+						<!-- <img class="client-logo" src="assets/images/logo/tn_police_logo_transparent.png" alt=""> -->
 					</div>
 					<h2 class="title p-2">Face recognition</h2>
 				</div>		
