--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
                 <div class="card-header card-header-border">
                     <div class="row">
                         <div class="col-md-6">
-                            <h5>Vehicle Movement</h5>
+                            <!-- <h5>Vehicle Movement</h5> -->
                         </div>
                         <div class="col-md-6 text-right">
                             <label>Page Size</label>
